<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="fill_parent"
              android:layout_width="fill_parent"
              xmlns:android="http://schemas.android.com/apk/res/android">
        <ScrollView android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    xmlns:android="http://schemas.android.com/apk/res/android">
                <LinearLayout
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent"
                        android:orientation="vertical"
                        android:background="#222222"
                        xmlns:android="http://schemas.android.com/apk/res/android">
                        <TextView
                                style="@style/ListLabelFontStyle.Red.Large.bold"
                                android:text="@string/weather_station_label"/>
                        <TextView
                                style="@style/ListLabelFontStyle.Blue.Small"
                                android:text="@string/default_string"
                                android:id="@+id/weather_station_text_value"/>
                        <TextView
                                style="@style/ListLabelFontStyle.Red.Large.bold"
                                android:text="@string/weather_time_label"/>
                        <TextView
                                style="@style/ListLabelFontStyle.Blue.Small"
                                android:text="@string/default_string"
                                android:id="@+id/time_text_value"/>
                        <TextView
                                style="@style/ListLabelFontStyle.Red.Large.bold"
                                android:text="@string/weather_label"/>
                        <TextView
                                style="@style/ListLabelFontStyle.Blue.Small"
                                android:text="@string/default_string"
                                android:id="@+id/weather_text_value"/>
                        <TextView
                                style="@style/ListLabelFontStyle.Red.Large.bold"
                                android:text="@string/temperature_label"/>
                        <TextView
                                style="@style/ListLabelFontStyle.Blue.Small"
                                android:text="@string/default_string"
                                android:id="@+id/temperature_text_value"/>
                        <TextView
                                style="@style/ListLabelFontStyle.Red.Large.bold"
                                android:text="@string/visibility_label"/>
                        <TextView
                                style="@style/ListLabelFontStyle.Blue.Small"
                                android:text="@string/default_string"
                                android:id="@+id/visibility_text_value"/>
                        <TextView
                                style="@style/ListLabelFontStyle.Red.Large.bold"
                                android:text="@string/pressure_label"/>
                        <TextView
                                style="@style/ListLabelFontStyle.Blue.Small"
                                android:text="@string/default_string"
                                android:id="@+id/pressure_text_value"/>
                </LinearLayout>
        </ScrollView>
</LinearLayout>